# fidelitybank-rag-api

./: .dockerignore  .env  docker-compose.yaml  dockerfile  fidelitybank-rag-api.code-workspace  main.py  pyproject.toml  test.py  test_lab.py
app/: config.py  embed.py  k8s.txt  main.py
app/core/: config.py
app/rag/: chunker.py  embeddings.py  loader.py
chroma/: chroma.sqlite3
db/: chroma.sqlite3
